last notebooks_test adjustment

--- a/notebooks_test/test_flexanomalies_ts.ipynb
+++ b/notebooks_test/test_flexanomalies_ts.ipynb
@@ -16,7 +16,7 @@
     "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")"
+    "sys.path.append(\".../ADL_platform//S-ADL\") # dir library"
    ]
   },
   {
