--- a/notebooks_test/test_load_preprocess_datasets.ipynb
+++ b/notebooks_test/test_load_preprocess_datasets.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")"
+    "sys.path.append(\".../ADL_platform//S-ADL\") # dir library"
    ]
   },
   {
