--- a/notebooks_test/test_pyod.ipynb
+++ b/notebooks_test/test_pyod.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")"
+    "sys.path.append(\".../ADL_platform//S-ADL\") #dir library"
    ]
   },
   {
@@ -19,19 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-18 14:29:56.311643: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-07-18 14:29:56.485185: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-02 10:15:40.383029: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-02 10:15:40.395471: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1752841796.549004  110732 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1752841796.567745  110732 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-07-18 14:29:56.736287: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1759392940.409583   33389 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1759392940.413444   33389 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-02 10:15:40.428744: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4748,136 +4748,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File Name                                             Modified             Size\n",
-      "UCI HAR Dataset/                               2015-02-15 19:13:56            0\n",
-      "UCI HAR Dataset/.DS_Store                      2015-02-15 19:13:56         6148\n",
-      "__MACOSX/                                      2015-02-15 19:14:12            0\n",
-      "__MACOSX/UCI HAR Dataset/                      2015-02-15 19:14:12            0\n",
-      "__MACOSX/UCI HAR Dataset/._.DS_Store           2015-02-15 19:13:56          120\n",
-      "UCI HAR Dataset/activity_labels.txt            2012-10-10 16:55:30           80\n",
-      "__MACOSX/UCI HAR Dataset/._activity_labels.txt 2012-10-10 16:55:30          226\n",
-      "UCI HAR Dataset/features.txt                   2012-10-11 14:41:06        15785\n",
-      "__MACOSX/UCI HAR Dataset/._features.txt        2012-10-11 14:41:06          226\n",
-      "UCI HAR Dataset/features_info.txt              2012-10-15 16:44:34         2809\n",
-      "__MACOSX/UCI HAR Dataset/._features_info.txt   2012-10-15 16:44:34          226\n",
-      "UCI HAR Dataset/README.txt                     2015-02-15 18:51:30         6304\n",
-      "__MACOSX/UCI HAR Dataset/._README.txt          2015-02-15 18:51:30          605\n",
-      "UCI HAR Dataset/test/                          2012-11-29 17:01:12            0\n",
-      "UCI HAR Dataset/test/Inertial Signals/         2012-11-29 17:01:12            0\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_acc_x_test.txt 2012-11-29 15:08:54      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/                 2015-02-15 19:14:12            0\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/ 2015-02-15 19:14:12            0\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_acc_x_test.txt 2012-11-29 15:08:54          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_acc_y_test.txt 2012-11-29 15:08:54      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_acc_y_test.txt 2012-11-29 15:08:54          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_acc_z_test.txt 2012-11-29 15:08:54      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_acc_z_test.txt 2012-11-29 15:08:54          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_gyro_x_test.txt 2012-11-29 15:09:30      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_gyro_x_test.txt 2012-11-29 15:09:30          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_gyro_y_test.txt 2012-11-29 15:09:32      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_gyro_y_test.txt 2012-11-29 15:09:32          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/body_gyro_z_test.txt 2012-11-29 15:09:32      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._body_gyro_z_test.txt 2012-11-29 15:09:32          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/total_acc_x_test.txt 2012-11-29 15:08:58      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._total_acc_x_test.txt 2012-11-29 15:08:58          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/total_acc_y_test.txt 2012-11-29 15:09:00      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._total_acc_y_test.txt 2012-11-29 15:09:00          226\n",
-      "UCI HAR Dataset/test/Inertial Signals/total_acc_z_test.txt 2012-11-29 15:09:00      6041350\n",
-      "__MACOSX/UCI HAR Dataset/test/Inertial Signals/._total_acc_z_test.txt 2012-11-29 15:09:00          226\n",
-      "__MACOSX/UCI HAR Dataset/test/._Inertial Signals 2012-11-29 17:01:12          226\n",
-      "UCI HAR Dataset/test/subject_test.txt          2012-11-29 15:09:40         7934\n",
-      "__MACOSX/UCI HAR Dataset/test/._subject_test.txt 2012-11-29 15:09:40          226\n",
-      "UCI HAR Dataset/test/X_test.txt                2012-11-29 15:25:42     26458166\n",
-      "__MACOSX/UCI HAR Dataset/test/._X_test.txt     2012-11-29 15:25:42          226\n",
-      "UCI HAR Dataset/test/y_test.txt                2012-11-29 15:09:40         5894\n",
-      "__MACOSX/UCI HAR Dataset/test/._y_test.txt     2012-11-29 15:09:40          226\n",
-      "__MACOSX/UCI HAR Dataset/._test                2012-11-29 17:01:12          226\n",
-      "UCI HAR Dataset/train/                         2012-11-29 17:01:16            0\n",
-      "UCI HAR Dataset/train/Inertial Signals/        2012-11-29 17:01:20            0\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_acc_x_train.txt 2012-11-29 15:08:50     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/                2015-02-15 19:14:16            0\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/ 2015-02-15 19:14:16            0\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_acc_x_train.txt 2012-11-29 15:08:50          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_acc_y_train.txt 2012-11-29 15:08:52     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_acc_y_train.txt 2012-11-29 15:08:52          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_acc_z_train.txt 2012-11-29 15:08:54     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_acc_z_train.txt 2012-11-29 15:08:54          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_gyro_x_train.txt 2012-11-29 15:09:26     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_gyro_x_train.txt 2012-11-29 15:09:26          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_gyro_y_train.txt 2012-11-29 15:09:28     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_gyro_y_train.txt 2012-11-29 15:09:28          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/body_gyro_z_train.txt 2012-11-29 15:09:30     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._body_gyro_z_train.txt 2012-11-29 15:09:30          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/total_acc_x_train.txt 2012-11-29 15:08:56     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._total_acc_x_train.txt 2012-11-29 15:08:56          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/total_acc_y_train.txt 2012-11-29 15:08:56     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._total_acc_y_train.txt 2012-11-29 15:08:56          226\n",
-      "UCI HAR Dataset/train/Inertial Signals/total_acc_z_train.txt 2012-11-29 15:08:58     15071600\n",
-      "__MACOSX/UCI HAR Dataset/train/Inertial Signals/._total_acc_z_train.txt 2012-11-29 15:08:58          226\n",
-      "__MACOSX/UCI HAR Dataset/train/._Inertial Signals 2012-11-29 17:01:20          226\n",
-      "UCI HAR Dataset/train/subject_train.txt        2012-11-29 15:09:40        20152\n",
-      "__MACOSX/UCI HAR Dataset/train/._subject_train.txt 2012-11-29 15:09:40          226\n",
-      "UCI HAR Dataset/train/X_train.txt              2012-11-29 15:25:38     66006256\n",
-      "__MACOSX/UCI HAR Dataset/train/._X_train.txt   2012-11-29 15:25:38          226\n",
-      "UCI HAR Dataset/train/y_train.txt              2012-11-29 15:09:38        14704\n",
-      "__MACOSX/UCI HAR Dataset/train/._y_train.txt   2012-11-29 15:09:38          226\n",
-      "__MACOSX/UCI HAR Dataset/._train               2012-11-29 17:01:16          226\n",
-      "__MACOSX/._UCI HAR Dataset                     2015-02-15 19:13:56          226\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/Beatriz/Doctorado GR/ADL_platform//S-ADL/SADL/static_data/static_datasets_uci.py:93: FutureWarning:\n",
-      "\n",
-      "The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "\n",
-      "/data/Beatriz/Doctorado GR/ADL_platform//S-ADL/SADL/static_data/static_datasets_uci.py:94: FutureWarning:\n",
-      "\n",
-      "The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train:\n",
-      "(7352, 561)\n",
-      "\n",
-      "X_test:\n",
-      "(2947, 561)\n",
-      "\n",
-      "y_train:\n",
-      "(7352, 1)\n",
-      "\n",
-      "y_test:\n",
-      "(2947, 1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/Beatriz/Doctorado GR/ADL_platform//S-ADL/SADL/static_data/static_datasets_uci.py:96: FutureWarning:\n",
-      "\n",
-      "The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "\n",
-      "/data/Beatriz/Doctorado GR/ADL_platform//S-ADL/SADL/static_data/static_datasets_uci.py:97: FutureWarning:\n",
-      "\n",
-      "The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train,X_test,y_train,y_test=global_load('human_activity_recognition')\n",
     "print(\"X_train:\")\n",
@@ -4892,7 +4765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4911,35 +4784,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<SADL.static_data.algorithms.pyod.PyodAnomalyDetection at 0x7bcbb794fd90>"
+       "<SADL.static_data.algorithms.pyod.PyodAnomalyDetection at 0x721823a71d80>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_abod.fit(X_train)"
+    "model_abod.fit( X_train.astype(np.float64) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/numpy/_core/fromnumeric.py:4008: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/numpy/_core/_methods.py:175: RuntimeWarning: invalid value encountered in divide\n",
+      "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
+      "/data/Beatriz/Doctorado GR/ADL_platform/S-ADL/venv/lib/python3.10/site-packages/numpy/_core/_methods.py:210: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores [1.59733438e-05 2.07303996e-05 5.44217269e-06 ... 1.24678273e-04\n",
-      " 9.37544335e-06 7.85145082e-05]\n"
+      "Scores [4.68799730e-19 3.55438833e-15 2.81972709e-15 ... 8.32973183e-19\n",
+      " 2.83862659e-15 1.57303038e-13]\n"
      ]
     }
    ],
@@ -4950,7 +4835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
