--- a/notebooks_test/test_flexanomalies.ipynb
+++ b/notebooks_test/test_flexanomalies.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append(\"/data/Beatriz/Doctorado GR/ADL_platform//S-ADL\")\n"
+    "sys.path.append(\".../ADL_platform//S-ADL\") # dir library\n"
    ]
   },
   {
